# Jora

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  base_dao.py  docker-compose.yml  entrypoint.sh  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  client.ts  comments.ts  media.ts  projects.ts  tasks.ts  users.ts
frontend/src/assets/: theme.css
frontend/src/components/: AppLayout.vue  CommentList.vue  ImportProjectDialog.vue  MediaGallery.vue  MediaUpload.vue  PaginationBar.vue  TaskFilters.vue
frontend/src/components/common/: EmptyState.vue  PageHeader.vue
frontend/src/components/layout/: AppShell.vue
frontend/src/components/projects/: ProjectCard.vue  ProjectGrid.vue
frontend/src/components/tasks/: KanbanColumn.vue  TaskCard.vue  (+2 more)
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  capabilities.ts
frontend/src/types/: index.ts
frontend/src/utils/: blob.ts  datetime.ts  errors.ts  media.ts  password.ts
migrations/: env.py
migrations/versions/: 007f7d87b3f9_create_all.py  088ca6fb48eb_add_roles_and_roles_users_tables.py  0_create_all.py  105f15584729_add_extension_to_media_table.py  1bc9a9b7f715_add_fs_uniquifier_to_user_model.py  24e197b2492e_add_is_archived_to_media_table.py  3a8cdb2e0957_add_media_table.py  3d1576100f5e_add_users_table_and_projects_table.py  4648901df73d_update_users_and_roles_tables_for_flask_.py  7b62394fd6c3_add_has_original_to_media.py  9f978053b5d9_add_permissions_field_to_roles_table.py  a41659ae0cf6_add_is_archived.py  abe0e2e15abc_create_all.py  d777142fdf15_update_description_length_in_projects_.py  dc60fce11cdf_fixed_tipo.py
src/: _types.py  actors.py  app.py  base_pydantic_types.py  config.py  database.py  dependencies.py  docs.py  errors.py  extentions.py  global_schemas.py  logger.py  logger_config.py  main.py  scheduler.py  security.py  utils.py  validation_decorator.py
src/media/: dao.py  models.py  routes.py  schemas.py  services.py
static/: docs.json  swagger.json
templates/: assignee_changed.html  notification.html
(+26 files in other folders)
