[tool.poetry]
name = "jora"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <slava20031112@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
pydantic = {extras = ["email"], version = "^2.10.2"}
psycopg = "^3.2.3"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
