[tool.poetry]
name = "jora"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <slava20031112@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "2.0.38"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
pydantic = {extras = ["email"], version = "^2.10.2"}
psycopg = "^3.2.3"
psycopg2 = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
flask = "^3.1.0"
flask-swagger-ui = "^4.11.1"
openapi-pydantic = "^0.5.0"
pyjwt = "^2.10.1"
flask-jwt-extended = "^4.7.1"
flask-sqlalchemy = "^3.1.1"
flask-openapi3 = {extras = ["scalar", "swagger"], version = "^4.1.0"}
flask-security = {extras = ["common", "fsqla"], version = "^5.6.0"}
setuptools = "69.5.1"
redis = "^5.2.1"
dramatiq = {extras = ["redis"], version = "^1.17.1"}
flask-dramatiq = {extras = ["redis"], version = "^0.6.0"}
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
